test/spec/exports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/exports.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/exports.wast:27:36: function variable out of range (max 1)
  (module (func) (export "a" (func 1)))
                                   ^
assert_invalid error:
  third_party/testsuite/exports.wast:31:40: redefinition of export "a"
  (module (func) (export "a" (func 0)) (export "a" (func 0)))
                                       ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:35:47: redefinition of export "a"
  (module (func) (func) (export "a" (func 0)) (export "a" (func 1)))
                                              ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:39:67: redefinition of export "a"
...nc) (global i32 (i32.const 0)) (export "a" (func 0)) (export "a" (global 0)))
                                                        ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:43:58: redefinition of export "a"
  (module (func) (table 0 anyfunc) (export "a" (func 0)) (export "a" (table 0)))
                                                         ^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:47:51: redefinition of export "a"
  (module (func) (memory 0) (export "a" (func 0)) (export "a" (memory 0)))
                                                  ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:76:58: global variable out of range (max 1)
  (module (global i32 (i32.const 0)) (export "a" (global 1)))
                                                         ^
assert_invalid error:
  third_party/testsuite/exports.wast:80:62: redefinition of export "a"
...e (global i32 (i32.const 0)) (export "a" (global 0)) (export "a" (global 0)))
                                                        ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:84:89: redefinition of export "a"
...) (global i32 (i32.const 0)) (export "a" (global 0)) (export "a" (global 1)))
                                                        ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:88:69: redefinition of export "a"
...obal i32 (i32.const 0)) (func) (export "a" (global 0)) (export "a" (func 0)))
                                                          ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:92:80: redefinition of export "a"
...2.const 0)) (table 0 anyfunc) (export "a" (global 0)) (export "a" (table 0)))
                                                         ^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:96:73: redefinition of export "a"
...32 (i32.const 0)) (memory 0) (export "a" (global 0)) (export "a" (memory 0)))
                                                        ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:124:48: table variable out of range (max 1)
  (module (table 0 anyfunc) (export "a" (table 1)))
                                               ^
assert_invalid error:
  third_party/testsuite/exports.wast:128:52: redefinition of export "a"
  (module (table 0 anyfunc) (export "a" (table 0)) (export "a" (table 0)))
                                                   ^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:137:59: redefinition of export "a"
  (module (table 0 anyfunc) (func) (export "a" (table 0)) (export "a" (func 0)))
                                                          ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:141:79: redefinition of export "a"
...c) (global i32 (i32.const 0)) (export "a" (table 0)) (export "a" (global 0)))
                                                        ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:145:63: redefinition of export "a"
... (table 0 anyfunc) (memory 0) (export "a" (table 0)) (export "a" (memory 0)))
                                                        ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:173:42: memory variable out of range (max 1)
  (module (memory 0) (export "a" (memory 1)))
                                         ^
assert_invalid error:
  third_party/testsuite/exports.wast:177:46: redefinition of export "a"
  (module (memory 0) (export "a" (memory 0)) (export "a" (memory 0)))
                                             ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:186:53: redefinition of export "a"
  (module (memory 0) (func) (export "a" (memory 0)) (export "a" (func 0)))
                                                    ^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:190:73: redefinition of export "a"
...) (global i32 (i32.const 0)) (export "a" (memory 0)) (export "a" (global 0)))
                                                        ^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:194:64: redefinition of export "a"
... (memory 0) (table 0 anyfunc) (export "a" (memory 0)) (export "a" (table 0)))
                                                         ^^^^^^^^^^^^^^^^^^^^^^
6/6 tests passed.
;;; STDOUT ;;)
